commit css et header footer

--- a/index.html
+++ b/index.html
@@ -10,38 +10,35 @@
 </head>
 <body>
     <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-                <img src="./images/WebAssembly_Logo.png" alt="logo" width="40px">
+            <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+                <img src="./images/WebAssembly_Logo.png" class= "logo" alt="logo">
                 <a class="navbar-brand" href="https://webassembly.org/">WebAssembly</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Actus
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Catégorie 1</a>
+                                    <a class="dropdown-item" href="#">Catégorie 2</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">A Propos</a>
+                            </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                    </div>
                 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Actus
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">A Propos</a>
-                        </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
             </nav>
     </header>
     <div class="container-fluid">
@@ -72,6 +69,7 @@
             </a>
         </div>
     </div>
+    <hr>
     <div class="row">
         <div class="col">
             <h2>Dernières actualités</h2>
@@ -103,18 +101,20 @@
                 </div>
             </div>
         </div>
-    <footer>
+    <footer class="bg-light">
         <div class="container-fluid">
-            <div class="row">
-                <nav class="nav flex-column">
-                    <a class="nav-link" href="#">Active</a>
-                    <a class="nav-link" href="#">Link</a>
-                    <a class="nav-link" href="#">Link</a>
+            <div class="row ">
+                <nav class="nav flex-column offset-2">
+                    <a class="nav-link" href="#">A propos</a>
+                    <a class="nav-link" href="#">Nous contacter</a>
                 </nav>
-                <nav class="nav flex-column">
-                    <a class="nav-link" href="#">Active</a>
-                    <a class="nav-link" href="#">Link</a>
-                    <a class="nav-link" href="#">Link</a>
+                <nav class="nav flex-column offset-2">
+                    <a class="nav-link" href="#">WebAssembly</a>
+                    <a class="nav-link" href="#">Mentions légales</a>
+                </nav>
+                <nav class="nav flex-column offset-2">
+                    <a class="nav-link" href="#">Facebook</a>
+                    <a class="nav-link" href="#">Github</a>
                 </nav>
             </div>
         </div>
