resize image for slider

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/slider1.png" class="d-block w-100" height="8%" alt="navigateur party">
+                    <img src="./images/slider1bis.png" class="d-block w-100" height="8%" alt="navigateur party">
                 </div>
                 <div class="carousel-item">
                     <img src="./images/slider2.jpeg" class="d-block w-100" height="8%" alt="tech_view">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider3.png" class="d-block w-100" height="8%" alt="graphic">
+                    <img src="./images/slider4bis.png" class="d-block w-100" height="8%" alt="graphic">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -69,7 +69,7 @@
             </a>
         </div>
     </div>
-    <hr>
+    
     <div class="row">
         <div class="col">
             <h2>Dernières actualités</h2>
@@ -124,3 +124,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>   
 </body>
 </html>
+
+
