--- a/aboutus.html
+++ b/aboutus.html
@@ -42,14 +42,14 @@
             </nav>
     </header>
     <p> <img src="./images/team.jpg" alt="team"></p>
-    <div class="card-deck">
+    <div class="card-deck us">
         <div class="card">
             <img src="./images/marlene.jpg" class="card-img-top" alt="marlene">
             <div class="card-body">
             <h5 class="card-title">Marlène</h5>
             <p class="card-text">La reine du CSS, c'est elle !</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer us">
                     <script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
                     <script type="IN/Share" data-url="https://www.linkedin.com"></script>
             </div>
@@ -60,20 +60,20 @@
             <h5 class="card-title">Cloé</h5>
             <p class="card-text">Rien ne lui fait peur, surtout pas une ligne de code.</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer us">
                     <script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
                     <script type="IN/Share" data-url="https://www.linkedin.com"></script>
             </div>
         </div>
     </div>
-    <div class="card-deck">
+    <div class="card-deck us">
         <div class="card">
             <img src="./images/guillaume.png" class="card-img-top" alt="guillaume">
             <div class="card-body">
             <h5 class="card-title">Guillaume</h5>
             <p class="card-text">Il a su se montrer valeureux pour dompter le WebAssembly !</p>
             </div>
-            <div class="card-footer">
+            <div class="card-footer us">
                 <script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
                 <script type="IN/Share" data-url="https://www.linkedin.com"></script>
             </div>
@@ -84,7 +84,7 @@
                 <h5 class="card-title">Stéphane</h5>
                 <p class="card-text">Il sait maintenant comment démolir Visual Studio...</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer us">
                         <script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
                         <script type="IN/Share" data-url="https://www.linkedin.com"></script>
                 </div>
