--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2>Dernières actualités</h2>
         </div>
     </div>
-    <div class="card-deck">
+    <div class="card-deck home">
         <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
@@ -107,7 +107,7 @@
             </div>
         </div>
     </div>
-        <footer class="bg-light">
+        <footer class="bg-light fixed-bottom">
             <div class="container-fluid">
                 <div class="row ">
                     <nav class="nav flex-column offset-2">
