--- a/contact-us.html
+++ b/contact-us.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="icon" type="image/xpng" href="./images/WebAssembly_Logo.png">
     <title>WebAssembly</title>
 </head>
 
@@ -42,8 +44,8 @@
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>               
-            </nav>
-        </header>
+        </nav>
+    </header>
 
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb fil">
@@ -78,7 +80,7 @@
 
             
 
-            <button class="btn btn-primary offset-5" type="submit">Envoyer</button>
+            <button class="btn btn-primary offset-5 mb-3" type="submit">Envoyer</button>
 
         </form>
 
@@ -86,23 +88,23 @@
             <img src="./images/image1.png" class="card-img-top" alt="course">
         </div>
 
-        <footer class="bg-light">
-                <div class="container-fluid">
-                    <div class="row ">
-                        <nav class="nav flex-column offset-2">
-                            <a class="nav-link" href="#">A propos</a>
-                            <a class="nav-link" href="#">Nous contacter</a>
-                        </nav>
-                        <nav class="nav flex-column offset-2">
-                            <a class="nav-link" href="#">WebAssembly</a>
-                            <a class="nav-link" href="#">Mentions légales</a>
-                        </nav>
-                        <nav class="nav flex-column offset-2">
-                            <a class="nav-link" href="#">Facebook</a>
-                            <a class="nav-link" href="#">Github</a>
-                        </nav>
-                    </div>
+        <footer class="bg-light fixed-bottom">
+            <div class="container-fluid">
+                <div class="row ">
+                    <nav class="nav flex-column offset-2">
+                        <a class="nav-link" href="#">A propos</a>
+                        <a class="nav-link" href="#">Nous contacter</a>
+                    </nav>
+                    <nav class="nav flex-column offset-2">
+                        <a class="nav-link" href="#">WebAssembly</a>
+                        <a class="nav-link" href="#">Mentions légales</a>
+                    </nav>
+                    <nav class="nav flex-column offset-2">
+                    <a class="nav-link" href="#"><i class="fab fa-facebook-square"></i>Facebook</a>
+                    <a class="nav-link" href="https://github.com/webassembly"><i class="fab fa-github"></i>Github</a>
+                    </nav>
                 </div>
+            </div>
             </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
