test save index et contact

--- a/contact-us.html
+++ b/contact-us.html
@@ -60,33 +60,34 @@
             </div>
         </div>
 
-        <form class="offset-1 formulaire">
-            <div class="form-group">
-                <label for="exampleFormControlInput1">Votre nom</label>
-                <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Prénom Nom">
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlInput1">Votre mail</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@mail.com">
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlInput1">Objet</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Objet du mail">
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlTextarea1">Votre message</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
-            </div>
+        <div class="row">
+            <form class="offset-1 col-lg-5 formulaire">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Votre nom</label>
+                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Prénom Nom">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Votre mail</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@mail.com">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Objet</label>
+                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Objet du mail">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Votre message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+                </div>
 
-            
+                <button class="btn btn-primary offset-5 mb-3" type="submit">Envoyer</button>
+            </form>
 
-            <button class="btn btn-primary offset-5 mb-3" type="submit">Envoyer</button>
-
-        </form>
-
-        <div class="card">
-            <img src="./images/image1.png" class="card-img-top" alt="course">
+            <div class="col-lg-5">
+                <img src="./images/image1.png" class="card-img-top" alt="course">
+            </div>
         </div>
+
+        
 
         <footer class="bg-light fixed-bottom">
             <div class="container-fluid">
