--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                 </blockquote>
             </div>
             <div class="card text-center">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
             </div>
             <div class="card">
               <img src="./images/image1.png" class="card-img-top" alt="image">
@@ -169,7 +169,7 @@
             </div>
         </div>
     </div> -->
-        <footer class="bg-light fixed-bottom">
+        <footer class="bg-light">
             <div class="container-fluid">
                 <div class="row ">
                     <nav class="nav flex-column offset-2">
