--- a/aboutus.html
+++ b/aboutus.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
 </hr>
-    <p><img src="./images/team.jpg" class="team" alt="team"></p>
+    <p><img src="./images/team.jpg" class="team col-4 offset-4" alt="team"></p>
     <div class="card-deck us">
         <div class="card">
             <img src="./images/marlene.jpg" class="card-img-top" alt="marlene">
