--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="aboutus.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/xpng" href="./images/WebAssembly_Logo.png">
     <title>WebAssembly</title>
@@ -46,7 +46,7 @@
         </nav>
     </header>
 </hr>
-    <p><img src="./images/team.jpg" class="team col-4 offset-4" alt="team"></p>
+    <p><div class="team"><h3>TEAM</h3></div></p>
     <div class="card-deck us">
         <div class="card">
             <img src="./images/marlene.jpg" class="card-img-top" alt="marlene">
