--- a/contact-us.html
+++ b/contact-us.html
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/xpng" href="./images/WebAssembly_Logo.png">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet">
+
     <title>WebAssembly</title>
 </head>
 
@@ -27,17 +29,12 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Actus
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Catégorie 1</a>
-                            <a class="dropdown-item" href="#">Catégorie 2</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">A Propos</a>
-                        </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Actus <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">A Propos</a>
+                    </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -56,18 +53,18 @@
 
         <div class="row">
             <div class="col offset-1 contactezns">
-                <h1> Contactez-nous </h1>
+                <h1> CONTACTEZ-NOUS </h1>
             </div>
         </div>
 
-        <div class="row">
-            <form class="offset-1 col-lg-5 formulaire">
+        <div class="row no-gutters align-items-center">
+            <form class="offset-1 col-lg-5 col-md-10 mr-3">
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Votre nom</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Prénom Nom">
+                    <label for="exampleFormControlInput1">Nom</label>
+                    <input type="name" class="form-control color-placeholder-contact" id="exampleFormControlInput1" placeholder="Prénom Nom">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Votre mail</label>
+                    <label for="exampleFormControlInput1">Mail</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@mail.com">
                 </div>
                 <div class="form-group">
@@ -78,18 +75,19 @@
                     <label for="exampleFormControlTextarea1">Votre message</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
                 </div>
-
-                <button class="btn btn-primary offset-5 mb-3" type="submit">Envoyer</button>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-primary" type="submit">Envoyer</button>
+                </div>
             </form>
 
             <div class="col-lg-5">
-                <img src="./images/image1.png" class="card-img-top" alt="course">
+                <img src="./images/image1bis.png" class="card-img-top" alt="course">
             </div>
         </div>
 
         
 
-        <footer class="bg-light fixed-bottom">
+        <footer class="bg-light">
             <div class="container-fluid">
                 <div class="row ">
                     <nav class="nav flex-column offset-2">
