--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="icon" type="image/xpng" href="./images/WebAssembly_Logo.png">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet">
+
     <title>WebAssembly</title>
 </head>
 <body>
@@ -28,8 +30,8 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Actus <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">A Propos</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">À Propos<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -69,21 +71,27 @@
     </div>
     
     <div class="row">
-        <div class="col titre-page">
-            <h2>Dernières actualités</h2>
+        <div class="offset-1 col titre-page">
+            <h1>Dernières actualités</h1>
         </div>
     </div>
     <div class="card-columns mb-3 offset-1 col-10">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./images/WebAssembly-Explained.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Titre article 1 </h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Amélioration des performances de WebAssembly dans les navigateurs</h5>
+                    <p class="card-text">Certaines améliorations de la vitesse viendront à mesure que les navigateurs 
+                        amélioreront la prise en charge de WebAssembly dans leurs moteurs. Les éditeurs de navigateurs 
+                        travaillent sur ces problèmes de manière indépendante.</p>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-primary" type="submit"> Lire plus </button>
+                    </div>
                 </div>
             </div>
             <div class="card p-3">
                 <blockquote class="blockquote mb-0 card-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <p>WebAssembly est un nouveau type de code pouvant être exécuté dans les navigateurs modernes.
+                    </p>
                     <footer class="blockquote-footer">
                         <small class="text-muted">
                             Someone famous in <cite title="Source Title">Source Title</cite>
@@ -94,49 +102,65 @@
             <div class="card">
                 <img src="./images/image1.png" class="card-img-top" alt="image1">
                 <div class="card-body">
-                    <h5 class="card-title">Article 2</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">Titre de l'article</h5>
+                    <p class="card-text">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis 
+                        delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque 
+                        sanguine specie ut lucratus ingentia laetabatur.</p>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-primary" type="submit"> Lire plus </button>
+                    </div>
                 </div>
             </div>
-            <div class="card bg-primary text-white text-center p-3">
-                <blockquote class="blockquote mb-0">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-                    <footer class="blockquote-footer text-white">
+            <div class="card bg-card text-white text-center p-3">
+                <blockquote class="blockquote mb-0 vertic">
+                <p style="display: block; margin: auto; padding: auto;">  Découvrez notre super team de ouf !!! </p>
+                    <!-- <footer class="blockquote-footer text-white">
                     <small>
                         Someone famous in <cite title="Source Title">Source Title</cite>
                     </small>
-                    </footer>
+                    </footer> -->
                 </blockquote>
             </div>
-            <div class="card text-center">
+            <!-- <div class="card text-center">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-            </div>
+            </div> -->
             <div class="card">
-              <img src="./images/image1.png" class="card-img-top" alt="image">
+                <img src="./images/wasmvsjs.jpeg" class="card-img-top" alt="image">
             </div>
             <div class="card p-3 text-right">
-              <blockquote class="blockquote mb-0">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                <footer class="blockquote-footer">
-                  <small class="text-muted">
-                    Someone famous in <cite title="Source Title">Source Title</cite>
-                  </small>
-                </footer>
-              </blockquote>
+                <blockquote class="blockquote mb-0">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                    <footer class="blockquote-footer">
+                    <small class="text-muted">
+                        Someone famous in <cite title="Source Title">Source Title</cite>
+                    </small>
+                    </footer>
+                </blockquote>
             </div>
             <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
             </div>
-          </div>
+            <div class="card">
+                <img src="./images/WebAssembly-Explained.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Amélioration des performances de WebAssembly dans les navigateurs</h5>
+                    <p class="card-text">Certaines améliorations de la vitesse viendront à mesure que les navigateurs 
+                        amélioreront la prise en charge de WebAssembly dans leurs moteurs. Les éditeurs de navigateurs 
+                        travaillent sur ces problèmes de manière indépendante.</p>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-primary" type="submit"> Lire plus </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- <div class="card-deck">
         <div class="card">
