MAJ contact.css file + MAJ style.cdd + modif images index.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -47,13 +47,13 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb fil">
                 <li class="breadcrumb-item"><a href="#" class="fil">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Contactez-nous</li>
+                <li class="breadcrumb-item active" aria-current="page">Nous contacter</li>
             </ol>
         </nav>
 
         <div class="row">
             <div class="col offset-1 contactezns">
-                <h1> CONTACTEZ-NOUS </h1>
+                <h1> NOUS CONTACTER </h1>
             </div>
         </div>
 
