--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/slider1bis.png" class="d-block w-100" height="8%" alt="navigateur party">
+                    <img src="./images/slider2.jpeg" class="d-block w-100" height="8%" alt="navigateur party">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/slider2.jpeg" class="d-block w-100" height="8%" alt="tech_view">
+                    <img src="./images/slider1bis.png" class="d-block w-100" height="8%" alt="tech_view">
                 </div>
                 <div class="carousel-item">
                     <img src="./images/slider4bis.png" class="d-block w-100" height="8%" alt="graphic">
@@ -75,7 +75,7 @@
             <h1>Dernières actualités</h1>
         </div>
     </div>
-    <div class="card-columns mb-3 offset-1 col-10">
+    <div class="card-columns mb-3 mt-3 offset-1 col-10">
             <div class="card">
                 <img src="./images/WebAssembly-Explained.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -92,11 +92,9 @@
                 <blockquote class="blockquote mb-0 card-body">
                     <p>WebAssembly est un nouveau type de code pouvant être exécuté dans les navigateurs modernes.
                     </p>
-                    <footer class="blockquote-footer">
-                        <small class="text-muted">
-                            Someone famous in <cite title="Source Title">Source Title</cite>
-                        </small>
-                    </footer>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-primary" type="submit"> Découvrir WebAssembly </button>
+                    </div>
                 </blockquote>
             </div>
             <div class="card">
@@ -149,9 +147,9 @@
                 </div>
             </div>
             <div class="card">
-                <img src="./images/WebAssembly-Explained.jpg" class="card-img-top" alt="...">
+                <img src="./images/wa.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Amélioration des performances de WebAssembly dans les navigateurs</h5>
+                    <h5 class="card-title"> Indicatum ut rector eiusdem indumentum conscius occulte tunc ex ut.</h5>
                     <p class="card-text">Certaines améliorations de la vitesse viendront à mesure que les navigateurs 
                         amélioreront la prise en charge de WebAssembly dans leurs moteurs. Les éditeurs de navigateurs 
                         travaillent sur ces problèmes de manière indépendante.</p>
