modifications cloe's pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -19,7 +19,7 @@
 
     <header>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <img src="./images/WebAssembly_Logo.png" class= "logo" alt="logo">
+            <img src="./images/WebAssembly_Logo.png" class="logo" alt="logo">
             <a class="navbar-brand" href="https://webassembly.org/">WebAssembly</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
 
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb fil">
-                <li class="breadcrumb-item"><a href="#" class="fil">Home</a></li>
+                <li class="breadcrumb-item"><a href="#" class="fil">Accueil</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Nous contacter</li>
             </ol>
         </nav>
