--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
                         <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
+                        <a class="nav-link" href="#"> WebAssembly <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">Actus <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">À Propos<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Team<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -75,7 +78,9 @@
             <h1>Dernières actualités</h1>
         </div>
     </div>
-    <div class="card-columns mb-3 mt-3 offset-1 col-10">
+
+    <div class="row mb-3 mt-3">
+        <div class="card-columns  offset-1 col-8">
             <div class="card">
                 <img src="./images/WebAssembly-Explained.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -159,6 +164,37 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-lg-2">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                        WA et navigateur
+                        <span class="badge badge-primary badge-pill">14</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        WA vs JS
+                        <span class="badge badge-primary badge-pill">2</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        WebAssembly 
+                        <span class="badge badge-primary badge-pill">1</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        WA vs JS
+                        <span class="badge badge-primary badge-pill">2</span>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        WebAssembly 
+                        <span class="badge badge-primary badge-pill">1</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <!-- <div class="card-deck">
         <div class="card">
