webassembly.html update / link to pages html

--- a/webassembly.html
+++ b/webassembly.html
@@ -26,13 +26,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Actus <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./webassembly.html">WebAssembly <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">À Propos<span class="sr-only">(current)</span></a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./actus.html">Actus <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./aboutus.html">À Propos<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -45,7 +48,7 @@
     </header>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb fil">
-        <li class="breadcrumb-item"><a href="#" class="fil">Home</a></li>
+        <li class="breadcrumb-item"><a href="./index.html" class="fil">Accueil</a></li>
         <li class="breadcrumb-item active" aria-current="page">WebAssembly</li>
         </ol>
     </nav>
@@ -396,11 +399,11 @@
         <div class="container-fluid">
             <div class="row ">
                 <nav class="nav flex-column offset-2">
-                    <a class="nav-link" href="#">À propos</a>
-                    <a class="nav-link" href="#">Nous contacter</a>
+                    <a class="nav-link" href="./aboutus.html">À propos</a>
+                    <a class="nav-link" href="./contact-us.html">Nous contacter</a>
                 </nav>
                 <nav class="nav flex-column offset-2">
-                    <a class="nav-link" href="#">WebAssembly</a>
+                    <a class="nav-link" href="./webassembly.html">WebAssembly</a>
                     <a class="nav-link" href="#">Mentions légales</a>
                 </nav>
                 <nav class="nav flex-column offset-2">
