compilation contact css and article css in style.css

--- a/article.html
+++ b/article.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="article.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Amaranth" rel="stylesheet">
     <link rel="icon" type="image/xpng" href="./images/WebAssembly_Logo.png">
@@ -46,7 +46,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb fil">
                 <li class="breadcrumb-item"><a href="#" class="fil">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page"> Actus / Article en cours</li>
+                <li class="breadcrumb-item active" aria-current="page"> Actus / Article</li>
             </ol>
         </nav>
         <div class="title-page text-center">
