--- a/contact-us.html
+++ b/contact-us.html
@@ -91,11 +91,11 @@
             <div class="container-fluid">
                 <div class="row ">
                     <nav class="nav flex-column offset-2">
-                        <a class="nav-link" href="#">A propos</a>
-                        <a class="nav-link" href="#">Nous contacter</a>
+                        <a class="nav-link" href="./aboutus.html">A propos</a>
+                        <a class="nav-link" href="./contact-us.html">Nous contacter</a>
                     </nav>
                     <nav class="nav flex-column offset-2">
-                        <a class="nav-link" href="#">WebAssembly</a>
+                        <a class="nav-link" href="./webassembly.html">WebAssembly</a>
                         <a class="nav-link" href="#">Mentions légales</a>
                     </nav>
                     <nav class="nav flex-column offset-2">
