--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
-            <a class="navbar-brand" href="https://webassembly.org/">
+            <a class="navbar-brand" href="https://webassembly.org/" target="_blank">
                 <img src="./images/WebAssembly_Logo.png" class= "logo" alt="logo">
                 WebAssembly
             </a>
@@ -25,16 +25,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"> WebAssembly <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./webassembly.html"> WebAssembly <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Actus <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./actus.html">Actus <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Team<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./contac-us.html">Team<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -116,7 +116,7 @@
             </div>
             <div class="card bg-card text-white text-center p-3">
                 <blockquote class="blockquote mb-0 vertic">
-                <p style="display: block; margin: auto; padding: auto;">  Découvrez notre super team de ouf !!! </p>
+                <p style="display: block; margin: auto; padding: auto;" class="lienteam"><a href="./aboutus.html" >  Découvrez notre super team !!! </a></p>
                     <!-- <footer class="blockquote-footer text-white">
                     <small>
                         Someone famous in <cite title="Source Title">Source Title</cite>
@@ -231,11 +231,11 @@
             <div class="container-fluid">
                 <div class="row ">
                     <nav class="nav flex-column offset-2">
-                        <a class="nav-link" href="#">A propos</a>
-                        <a class="nav-link" href="#">Nous contacter</a>
+                        <a class="nav-link" href="./aboutus.html">À propos</a>
+                        <a class="nav-link" href="./contact-us.html">Nous contacter</a>
                     </nav>
                     <nav class="nav flex-column offset-2">
-                        <a class="nav-link" href="#">WebAssembly</a>
+                        <a class="nav-link" href="./webassembly.html">WebAssembly</a>
                         <a class="nav-link" href="#">Mentions légales</a>
                     </nav>
                     <nav class="nav flex-column offset-2">
