--- a/webassembly.html
+++ b/webassembly.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <img src="./images/WebAssembly_Logo.png" class="logo" alt="logo">
-            <a class="navbar-brand" href="https://webassembly.org/">WebAssembly</a>
+            <a class="navbar-brand" href="https://webassembly.org/" target="_blank">WebAssembly</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
